# Thesis_OpenCV_ObjectDetection

./: CMakeLists.txt  README.md
inc/: control.h  jetson_uart.h  pi_lane_detect.h  raspi_uart.h  utility.h
src/: control.cpp  jetson_uart.cpp  main.cpp  pi_lane_detect.cpp  raspi_uart.cpp  utility.cpp
svm_sign_detect/dlib/: CMakeLists.txt
svm_sign_detect/src/: my_detect_test.cpp  sign_detect.cpp  sign_detect.h
svm_sign_detect/svm_detectors/: new_left.svm  new_right.svm  new_stop.svm
